--- a/code/res/values/strings.xml
+++ b/code/res/values/strings.xml
@@ -2,7 +2,14 @@
 <resources>
 
     <string name="app_name">Coach Board</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_bar_erase">Erase</string>
+    <string name="action_bar_load">Load</string>
+    <string name="action_bar_save">Save</string>
+    <string name="action_bar_reset">Reset</string>
+    <string name="action_bar_save_dialog_title">Name</string>
+    <string name="action_bar_load_dialog_title">Select a file</string>
+    <string name="ok">@android:string/ok</string>
+    <string name="cancel">@android:string/cancel</string>
     <string name="tab_full_ground">Full ground</string>
     <string name="tab_half_ground">Half ground</string>
 
