change package name

--- a/code/res/values-zh-rTW/strings.xml
+++ b/code/res/values-zh-rTW/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">籃球戰術板</string>
+    <string name="app_name">超級戰術板</string>
     <string name="action_bar_erase">清除路線</string>
     <string name="action_bar_load">讀取</string>
     <string name="action_bar_save">儲存</string>
@@ -17,7 +17,7 @@
     <string name="saved_data_list_item_confirm_dialog">確定要刪除</string>
     <string name="none_saved_data_hint">尚未儲存任何戰術</string>
     <string name="data_saved_success_hint">戰術儲存成功</string>
-    <string name="share_text">分享我的戰術板經由 Android 籃球戰術板!</string>
-    <string name="share_title">籃球戰術板!</string>
+    <string name="share_text">分享我的戰術板經由 Android 超級戰術板!</string>
+    <string name="share_title">超級戰術板!</string>
 
 </resources>
