--- a/code/res/values/strings.xml
+++ b/code/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Basketball Coach Board</string>
+    <string name="app_name">Super Coach Board</string>
     <string name="action_bar_erase">Erase</string>
     <string name="action_bar_load">Load</string>
     <string name="action_bar_save">Save</string>
@@ -17,7 +17,7 @@
     <string name="saved_data_list_item_confirm_dialog">Do you want to delete file </string>
     <string name="none_saved_data_hint">There are no data saved!</string>
     <string name="data_saved_success_hint">Data saved!</string>
-    <string name="share_text">Sharing my board from Coach board in Android!</string>
-    <string name="share_title">Coach board!</string>
+    <string name="share_text">Sharing my board from Super Coach board in Android!</string>
+    <string name="share_title">Super Coach board!</string>
 
 </resources>
