--- a/code/res/values-zh-rTW/strings.xml
+++ b/code/res/values-zh-rTW/strings.xml
@@ -8,6 +8,7 @@
     <string name="action_bar_reset">重置</string>
     <string name="action_bar_share">分享給</string>
     <string name="action_bar_replay">戰術重播</string>
+    <string name="action_bar_undo">上一步</string>
     <string name="action_bar_save_dialog_title">戰術名稱</string>
     <string name="action_bar_load_dialog_title">選擇一個戰術</string>
     <string name="ok">@android:string/ok</string>
