--- a/code/res/values/strings.xml
+++ b/code/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="action_bar_reset">Reset</string>
     <string name="action_bar_replay">Replay</string>
     <string name="action_bar_share">Share to</string>
+    <string name="action_bar_undo">Undo</string>
     <string name="action_bar_save_dialog_title">Name</string>
     <string name="action_bar_load_dialog_title">Select a file</string>
     <string name="ok">@android:string/ok</string>
