add soport type radio buttons

--- a/code/res/values-zh-rTW/strings.xml
+++ b/code/res/values-zh-rTW/strings.xml
@@ -16,6 +16,7 @@
     <string name="tab_full_ground">全場</string>
     <string name="tab_half_ground">半場</string>
     <string name="tab_save_data">儲存的戰術</string>
+    <string name="tab_settings">設定</string>
     <string name="saved_data_list_item_confirm_dialog">確定要刪除</string>
     <string name="none_saved_data_hint">尚未儲存任何戰術</string>
     <string name="data_saved_success_hint">戰術儲存成功</string>
