--- a/code/res/values/strings.xml
+++ b/code/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Super Coach Board</string>
+    <string name="app_name">Super Coach Tactic Board</string>
     <string name="action_bar_erase">Erase</string>
     <string name="action_bar_load">Load</string>
     <string name="action_bar_save">Save</string>
@@ -16,10 +16,18 @@
     <string name="tab_full_ground">Full ground</string>
     <string name="tab_half_ground">Half ground</string>
     <string name="tab_save_data">Saved data</string>
+    <string name="tab_settings">Settings</string>
     <string name="saved_data_list_item_confirm_dialog">Do you want to delete file </string>
     <string name="none_saved_data_hint">There are no data saved!</string>
     <string name="data_saved_success_hint">Data saved!</string>
     <string name="share_text">Sharing my board from Super Coach board in Android!</string>
     <string name="share_title">Super Coach board!</string>
+    <!-- settings -->
+    <string name="settings_basketball">Basketball</string>
+    <string name="settings_baseball">Baseball</string>
+    <string name="settings_football">Football</string>
+    <string name="settings_soccer">Soccer</string>
+    <string name="settings_tennies">Tennis</string>
+    <string name="settings_volleyball">Volleyball</string>
 
 </resources>
